--- a/assets/antd-custom.less
+++ b/assets/antd-custom.less
@@ -1,4 +1,5 @@
-@primary-color: #0070f3;
+@primary-color: #f94f28;
+@border-radius-base: 0px;
+@font-family: 'Heebo';
 
 @layout-header-height: 40px;
-@border-radius-base: 2px;
